style.css
:root {
  --primary-color: #FF9900;
  --secondary-color: #FFC700;
  --minor-color: #FFE7C2;
  --bg: #F2EDE5;
  --currentBorderColor: #FF9900;

  /* Font */
  --title-size: 1.5rem;
  --body-size: 1.1rem;
  --desctiprion-size: 1rem;
  --title-weight: 100;

  --welcomeSize: 2.5rem;

  --body-text-color: #222222;
  --note-text-color: #979797;

  /* borders */
  --button-border-radius: 0.5rem;
  --sidebar-border-radius: 0.8rem;
  --general-border-radius: 0.6rem;
  --minor-border-radius: 0.4rem;

  /* Colors */
  --primary-green: #2BA600;
  --secondary-green: #1BBF00;
  --minor-green: #CCEAC2;

  --primary-yellow: #FF9900;
  --secondary-yellow: #FFC700;
  --minor-yellow: #FFE7C2;

  --primary-blue: #00A3FF;
  --secondary-blue: #00C2FF;
  --minor-blue: #C2E9FF;

  --primary-purple: #B900B1;
  --secondary-purple: #D848D2;
  --minor-purple: #DF7FDB;

  --primary-red: #E95757;
  --secondary-red: #C14D4D;

  --primary-brown: #DDC298;
  --secondary-brown: #C3AF8E;


  --shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.2);
}

@font-face {
  font-family: 'Itim';
  src: url('./resources/fonts/Itim-Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Inter';
  src: url('./resources/fonts/static/Inter_18pt-Bold.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'GasoekOne';
  src: url('./resources/fonts/GasoekOne-Regular.ttf') format('truetype');
  font-weight: bold;
  font-style: normal;
}

html {
  min-width: -webkit-fill-available;
}

.body {
  background: var(--bg);
  color: var(--body-text-color);
  font-size: var(--body-size);
}

div.sideBarButtonContainer {
  text-align: center;
}

.sideBarButton {
  background: var(--primary-color);
  color: white;
  border: solid 0.2rem white;
  width: 4.5rem;
  border-radius: 100%;
  aspect-ratio: 1/1;
  padding: 1rem 1rem;
  margin: 0.3rem;
  cursor: pointer;
  transition: all 0.3s;
  box-shadow: var(--shadow);
}

.sideBarButton:hover {
  filter: brightness(0.9);
  transition: all 0.3s;
}

div.topBar {
  margin-top: 1rem;
  width: 100%;
  height: 10rem;
  /*background-color: blue;*/
  display: grid;
  grid-template-rows: 6rem 4rem;
}

div.upperPart {
  /*background-color: var(--primary-purple);*/
  display: flex;
  flex-direction: row;
  width: 100%;
  height: 100%;
}

div.lowerPart {
  overflow: hidden;
  width: 100%;
}

div.buttonScroll {
  /*background-color: var(--primary-red);*/
  width: 100%;
  height: 4rem;
  padding: 0.5rem;
  display: flex;
  align-items: center;
  gap: 0.5rem;
  overflow: hidden;
  overflow-x: auto;
}

div.buttonScroll::-webkit-scrollbar {
  height: 0.3rem;
  box-shadow: var(--shadow);
}

div.buttonScroll::-webkit-scrollbar-thumb {
  background-color: lightgray;
  border-radius: 100rem;
}

div.buttonScroll::-webkit-scrollbar-track {
  height: 0.3rem;
  background: rgba(211, 211, 211, 0.192);
}

div.titleContainer {
  font-family: 'Inter';
  display: flex;
  flex-direction: row;
  align-items: center;
  padding-left: 0.4rem;
  padding-right: 0.4rem;
  padding-top: 0.3rem;
  width: 100%;
  max-width: calc(100vw - 8rem);
  font-size: var(--title-size);
  font-weight: var(--title-weight);
  text-transform: capitalize;
  overflow: hidden;
  overflow-x: auto;
  text-overflow: ellipsis;
}

p.loadingText {
  position: relative;
  color: var(--secondary-brown);
}

p.loadingText::after {
  content: 'loading...';
  animation: loading 2s linear infinite;
}

@keyframes loading {
  25% {
    content: 'loading';
  }

  50% {
    content: 'loading.';
  }

  75% {
    content: 'loading..';
  }

  100% {
    content: 'loading...';
  }
}

b.decoratedTitle {
  color: var(--primary-color);
  text-transform: uppercase;
  margin-left: 0.2rem;
}

b.buttonText {
  font-size: var(--body-size);
  font-weight: var(--title-weight);
  font-family: 'Inter';
}

button.quickButton {
  flex-shrink: 0;
  color: white;
  background-color: var(--primary-color);
  border: none;
  height: 100%;
  width: 8rem;
  min-width: fit-content;
  border-radius: var(--button-border-radius);
  transition: all 0.3s;
  box-shadow: var(--shadow);
}

button.quickButton:hover {
  filter: brightness(0.9);
  transition: all 0.3s;
}

img.icon {
  margin-right: 0.5rem;
}

div.body {
  width: 100%;
  height: calc(100vh - 11rem);
  /*background-color: var(--primary-blue);*/
}

div.section {
  /*background-color: var(--primary-green);*/
  height: 100%;
  padding: 0.5rem;
}


.hidden {
  display: none !important;
  z-index: -99 !important;
}

div.sidebar {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: .4rem;
  z-index: 3;
  position: fixed;
  top: 0;
  left: -100vw;
  background: var(--primary-color);
  box-shadow: var(--shadow);
  height: 100vh;
  width: 50vw;
  min-width: 15rem;
  max-width: 20rem;
  border-top-right-radius: var(--sidebar-border-radius);
  border-bottom-right-radius: var(--sidebar-border-radius);
  transition: all 0.3s;
}

div.sidebar.open {
  left: 0;
  transition: all 0.3s;
}

div.popup {
  color: var(--body-text-color);
  z-index: 3;
  position: fixed;
  bottom: -60vh;
  left: 0;
  width: 100vw;
  height: 60vh;
  background: white;
  border-top-left-radius: var(--sidebar-border-radius);
  border-top-right-radius: var(--sidebar-border-radius);
  transition: all 0.3s;
  box-shadow: var(--shadow);
}

div.popup.open {
  bottom: 0;
  transition: all 0.3s;
}

div.overlay {
  position: fixed;
  top: 0;
  left: 0rem;
  width: 100vw;
  height: 100vh;
  display: none;
  z-index: 2;
  background: rgba(0, 0, 0, 0.151);
  transition: all 0.3s;
}

div.overlay.visible {
  display: block;
  transition: all 0.3s;
}

h2.subtitle {
  font-size: 1.4rem;
  font-family: 'Inter';
  font-weight: bold;
}

div.eventContainer {
  display: flex;
  flex-direction: column;
  gap: 0.3rem;
  padding: 0.3rem;
  width: 100%;
  height: calc(100% - 2.5rem);
  background-color: var(--minor-color);
  border-radius: var(--general-border-radius);
  padding-bottom: 4rem;
}
/* ... */

